# oo-ctrl-py

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yaml
dataset/: scene_1.json  scene_2.json
examples/: dataset.ipynb  dataset_wrap.ipynb  pyminisim_mppi_agents.py  pyminisim_mppi_bicycle_example.py  pyminisim_mppi_example.py  pyminisim_mppi_ped_plus_robot.py  pyminisim_mppi_pedestrians_example.py
oo_ctrl/: __init__.py
oo_ctrl/nb/: __init__.py  controllers.py  core.py  standard_costs.py  standard_models.py  util.py
oo_ctrl/np/: __init__.py  controllers.py  core.py  cost_monitor.py  samplers.py  standard_costs.py  standard_models.py  util.py
test/: naive_functions.py  test_math.py  test_nb_costs.py  test_nb_dynamics.py  test_np_costs.py  test_np_dynamics.py
