[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oo-ctrl-py"
version = "0.1.0"
authors = [
    { name="Timur Akhtyamov", email="Timur.Akhtyamov@skoltech.ru" },
]
description = "Object-oriented wrapper over multiple control frameworks for Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.4.0",
    "numba>=0.58.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "wheel>=0.37.0",
]

[tool.setuptools.packages.find]
include = ["oo_ctrl*"]  # Replace with your package name 
